--- a/live2.html
+++ b/live2.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
+    <img width="100%" style="display: block;" src="images/chinese.png" alt="">
     <header class="video-box">
-        <video class="video" preload="auto" poster="images/chinese.png" controls src="http://cdn.www.hqkid.cn/live2/dengguanquelou.mp4"></video>
+        <video class="video" preload="auto" controls src="http://cdn.www.hqkid.cn/live2/dengguanquelou.mp4"></video>
         <div class="video-img"></div>
     </header>
     <div class="listBox">
-        <h4>国学沉浸课堂</h4>
         <ul>
             <li class="li-active" videoUrl="http://cdn.www.hqkid.cn/live2/dengguanquelou.mp4">登鹳雀楼</li>
             <li videoUrl="http://cdn.www.hqkid.cn/live2/fudeguyuancaosongbie.mp4">赋得古原草送别</li>
