--- a/live4.html
+++ b/live4.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
+    <img src="images/nurseryRhyme.png" alt="">
     <header class="video-box">
-        <video class="video" preload="auto" poster="images/nurseryRhyme.png" controls src="http://cdn.www.hqkid.cn/live4/MV-dengguanquelou.mp4"></video>
+        <video class="video" preload="auto" controls src="http://cdn.www.hqkid.cn/live4/MV-dengguanquelou.mp4"></video>
         <div class="video-img"></div>
     </header>
     <div class="listBox">
-        <h4>儿歌唱跳</h4>
         <ul>
             <li class="li-active" videoUrl="http://cdn.www.hqkid.cn/live4/MV-dengguanquelou.mp4">登鹳雀楼-唱跳</li>
             <li videoUrl="http://cdn.www.hqkid.cn/live4/MV-fudeguyuancaosongbie.mp4">赋得古原草送别-唱跳</li>
