--- a/live5.html
+++ b/live5.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
+    <img src="images/painting.png" alt="">
     <header class="video-box">
-        <video class="video" preload="auto" poster="images/painting.png" controls src="http://cdn.www.hqkid.cn/live5/aifeiertieta-xiatian.mp4"></video>
+        <video class="video" preload="auto" controls src="http://cdn.www.hqkid.cn/live5/aifeiertieta-xiatian.mp4"></video>
         <div class="video-img"></div>
     </header>
     <div class="listBox">
-        <h4>创想绘画</h4>
         <ul>
             <li class="li-active" videoUrl="http://cdn.www.hqkid.cn/live5/aifeiertieta-xiatian.mp4">埃菲尔铁塔-夏天</li>
             <li videoUrl="http://cdn.www.hqkid.cn/live5/caibi.mp4">彩笔</li>
