--- a/live3.html
+++ b/live3.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
+    <img width="100%" style="display: block;" src="images/english.png" alt="">
     <header class="video-box">
-        <video class="video" preload="auto" poster="images/english.png" controls src="http://cdn.www.hqkid.cn/live3/day1-FindingParents.mp4"></video>
+        <video class="video" preload="auto" controls src="http://cdn.www.hqkid.cn/live3/day1-FindingParents.mp4"></video>
         <div class="video-img"></div>
     </header>
     <div class="listBox">
-        <h4>英语沉浸课堂</h4>
         <ul>
             <li class="li-active" videoUrl="http://cdn.www.hqkid.cn/live3/day1-FindingParents.mp4">day1-Finding_Parents</li>
             <li videoUrl="http://cdn.www.hqkid.cn/live3/day2-brotherandsister.mp4">day2-brother and sister</li>
